tests/baselines/reference/parserComputedPropertyName20.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts(2,5): error TS1169: Computed property names are not allowed in interfaces or type literals.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts (1 errors) ====
    interface I {
        [e](): number 
        ~~~
!!! error TS1169: Computed property names are not allowed in interfaces or type literals.
    }